# mcp-wechat-clawbot

./: .gitignore  README.md  README_zh.md  __main__.py  cli.py  pyproject.toml  requirements.txt
src/: __init__.py  account_manager.py  api.py  cursor_manager.py  database.py  login.py  main.py  message_handler.py  thread_pool.py
