[project]
name = "mcp-wechat-clawbot"
version = "0.1.0"
description = "MCP server for WeChat with multi-account support, SQLite storage, and QR code login"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "qrcode-terminal>=0.1.0",
    "requests>=2.31.0",
]

[project.scripts]
mcp-wechat-clawbot = "src.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"
